# Logram

./: CMakeLists.txt  README.md  mkdocs.yml
docs/: filtering.md  format-strings.md  getting-started.md  index.md  keybindings.md  modules.md  roadmap.md
scripts/: new_module.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  perf_analyzer.cpp  perf_analyzer.hpp
src/config/: ConfigHandler.cpp  ConfigHandler.hpp
src/file_parsing/: CMakeLists.txt  cached_filtered_file_navigator.cpp  cached_filtered_file_navigator.hpp  filtered_file_reader.cpp  processed_line.cpp  processed_line.hpp
src/frontends/term/: CMakeLists.txt  main.cpp
src/frontends/term/include/: log_parser_terminal.hpp  logram_terminal.hpp  logram_terminal_module.hpp  lp_terminal_module.hpp  terminal_modules.hpp  terminal_state.hpp
src/frontends/term/src/: log_parser_terminal.cpp  logram_terminal.cpp
src/frontends/term/src/modules/: arrows_module.cpp  config_manager_module.cpp  cursor_move_module.cpp  filter_management_module.cpp  hide_latest_error_module.cpp  text_search_module.cpp  vim_motions_module.cpp  vim_quit_module.cpp  wasd_module.cpp
src/line_parsing/: CMakeLists.txt  line_format.hpp  line_parser.cpp  parsing_basics.cpp  parsing_basics.hpp  parsing_data.cpp  parsing_data.hpp
tests/: CMakeLists.txt  bench_main.cpp  test_cached_filtered_file_navigator.cpp  test_date_field.cpp  test_filtered_file_reader.cpp  test_find_next_occurence.cpp  test_helpers.hpp  test_jump_to_local_line.cpp  test_line_format.cpp  test_log_parser_terminal.cpp  test_logram_terminal.cpp
tests/modules/: test_arrows_module.cpp  test_cursor_move_module.cpp  test_filter_management_module.cpp  test_text_search_module.cpp  test_vim_motions_module.cpp  test_wasd_module.cpp
